# anims_morpho_hydro_analysis

./: README.md  pyproject.toml
src/anim/cli/: anim.py  animation.py  app.py
src/anim/cli/yaml/: anim_intertidal_vs_hydro_etretat.yaml
src/anim/core/: geo.py  hydro.py  img.py  intertidal_vs_hydro.py  morpho.py
