[project]
name = "anim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "georef @ git+ssh://git@github.com/wavesnsee/georef@main",
    "opencv-python-headless",
    "ruff",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
    "typer>=0.19.2"
]


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
anim = "anim.cli.app:app"
